; ModuleID = '/home/carl/AnghaBench/ish/kernel/extr_fs.c_fs_chdir.c'
source_filename = "/home/carl/AnghaBench/ish/kernel/extr_fs.c_fs_chdir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fs_info = type { i32, %struct.fd* }
%struct.fd = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fs_chdir(%struct.fs_info* %0, %struct.fd* %1) #0 {
  %3 = alloca %struct.fs_info*, align 8
  %4 = alloca %struct.fd*, align 8
  store %struct.fs_info* %0, %struct.fs_info** %3, align 8
  store %struct.fd* %1, %struct.fd** %4, align 8
  %5 = load %struct.fs_info*, %struct.fs_info** %3, align 8
  %6 = getelementptr inbounds %struct.fs_info, %struct.fs_info* %5, i32 0, i32 0
  %7 = call i32 @lock(i32* %6)
  %8 = load %struct.fs_info*, %struct.fs_info** %3, align 8
  %9 = getelementptr inbounds %struct.fs_info, %struct.fs_info* %8, i32 0, i32 1
  %10 = load %struct.fd*, %struct.fd** %9, align 8
  %11 = call i32 @fd_close(%struct.fd* %10)
  %12 = load %struct.fd*, %struct.fd** %4, align 8
  %13 = load %struct.fs_info*, %struct.fs_info** %3, align 8
  %14 = getelementptr inbounds %struct.fs_info, %struct.fs_info* %13, i32 0, i32 1
  store %struct.fd* %12, %struct.fd** %14, align 8
  %15 = load %struct.fs_info*, %struct.fs_info** %3, align 8
  %16 = getelementptr inbounds %struct.fs_info, %struct.fs_info* %15, i32 0, i32 0
  %17 = call i32 @unlock(i32* %16)
  ret void
}

declare dso_local i32 @lock(i32*) #1

declare dso_local i32 @fd_close(%struct.fd*) #1

declare dso_local i32 @unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
